backup/v5.3/readme.md
✔️ What are the unique Job categories in the dataset for each city? Visualise the frequency of job categories, allowing city being a variable.
✔️ Work out the vocabulary used by each job category, respectively. Visualise the Word Frequency.
✔️ data cleaning
✔️ Tokenize
✔️ Change the plot for city and category to the heatmap instead of hist
✔️ lemmatize
✔️ stemming
✔️ retokenize for each job description
✔️ remove stop words
✔️ TF-IDF
✔️ patterns
✔️ patterns matching for user input
✔️ get experience request from job description
✔️ set up the chat bot and able to obtain the info from user input
✔️ able to get the job type from user input (full time job, part time job etc.)
✔️ able to get the company name from user input
✔️ robot now can get the clear user input (remove unnecessary words, now able to match in the data set)
